# Organ-16

./: .gitattributes  .gitignore  README.md  count_comps.py  first.pglu  main.pglu  main.py  organ16.bak  organ16.circ  potiglu16.circ  second.pglu
asm-lang/vs_code/organ-16-asm-support/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
circuits/: comparators.circ  organ16.circ
docs/ORG 16 ASM/: org16 assembly.md  vscodeExtension.md
emulator/: CMakeLists.txt  compile.bat
emulator/scripts/: compileWin.bat
emulator/src/: main.cpp  qt_includes.hpp  resources.qrc  splitter.hpp
emulator/src/backend/: clock.cpp  clock.hpp  cpu.cpp  cpu.hpp
emulator/src/backend/alu/: alu.cpp  alu.hpp
emulator/src/backend/control_unit/: control_unit.cpp  control_unit.hpp
emulator/src/backend/memory/: memory_interface.cpp  memory_interface.hpp  ram.cpp  ram.hpp
emulator/src/backend/registers/: registers.cpp  registers.hpp
emulator/src/backend/temp_values/: temp_values.cpp  temp_values.hpp
emulator/src/layouts/: io_ports.cpp  io_ports.hpp  ram_panel.cpp  ram_panel.hpp
emulator/src/layouts/regs/: clck_btn.hpp  flow_layout.cpp  flow_layout.hpp
emulator/src/layouts/screen/: canvas.cpp  canvas.hpp
emulator/src/stylesheets/: lineedit.qss  menu.qss  ram_panel.qss  scrollarea.qss  slider.qss
programs/: 0_div.org  compile_draw_red_rect.py  compile_tests.py  compiler.py  draw_red_rect.org  draw_red_rect.pglu  draw_red_rect.py  fill_red.l  tests.py
programs/division_by_0/: 0_div.l  0_div.org
programs/draw_image/: code.org  draw_img.l
programs/fill_screen_red/: fill_red.org
programs/io/: io.l  io.org
programs/pong/: pong.l  pong.org  pong.utils.org  test.org
programs/stack/: stack.l  stack.org
programs/tests/: first_test.org  tests.l
tools/: compiler.py  count_comps.py  image_encoder.py
(+5 files in other folders)
